--- a/Ardroid-Core/build.gradle
+++ b/Ardroid-Core/build.gradle
@@ -13,7 +13,6 @@ repositories {
 }
 
 dependencies {
-    compile files("libs/android-support-v4.jar")
     compile 'com.google.guava:guava:14.0.1'
 }
 
@@ -31,7 +30,7 @@ android {
         versionCode 1
         versionName versionName()
         minSdkVersion 14
-        targetsdkversion 16
+        targetSdkVersion 14
     }
     buildTypes {
         debug {
@@ -42,6 +41,7 @@ android {
 }
 
 dependencies {
+	compile 'com.android.support:support-v4:18.0.0'
 }
 
 private String versionName() {
