--- a/Ardroid-Core/build.gradle
+++ b/Ardroid-Core/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.5.+'
+        classpath 'com.android.tools.build:gradle:0.6.1+'
     }
 }
 apply plugin: 'android'
@@ -14,6 +14,9 @@ repositories {
 
 dependencies {
     compile 'com.google.guava:guava:14.0.1'
+    compile 'com.android.support:support-v4:18.0.0'
+    compile project(':Firmata')
+    compile project(':Serial')
 }
 
 android {
@@ -38,10 +41,6 @@ android {
             zipAlign true
         }
     }
-}
-
-dependencies {
-	compile 'com.android.support:support-v4:18.0.0'
 }
 
 private String versionName() {
