--- a/Ardroid-Core/src/main/AndroidManifest.xml
+++ b/Ardroid-Core/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:theme="@style/AppTheme">
         <activity
                 android:name="me.hanhaify.ardroid.MainActivity"
-                android:label="@string/title_activity_main">
+                android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
