--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+allprojects  {
+    apply plugin: 'idea'
+}
+
+subprojects {
+    repositories {
+        mavenCentral()
+    }
+}
