--- a/Ardroid-Core/build.gradle
+++ b/Ardroid-Core/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     compile 'com.google.guava:guava:14.0.1'
     compile 'com.android.support:support-v4:18.0.0'
+    compile files('libs/achartengine-1.1.0.jar')
     compile project(':Firmata')
     compile project(':Serial')
 }
